[package]
name = "browsem_ws_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"
actix-ws = "0.3.1"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.3", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

webrtc = "0.14"
